add base css stylesheets and meta html tags

--- a/index.html
+++ b/index.html
@@ -2,7 +2,17 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Résumé</title>
+    <link rel="stylesheet" href="https://binary-studio-academy.github.io/stage-2/assets/stylesheets/base.css">
+    <meta name="description" content="Michael Jackson is alive and is back">
+    <meta name="keywords" content="Michael Jackson, HTML, CSS, BSA21">
+    <meta name="author" content="Paul Vasylenko">
+    <link rel="mj" href="https://www.facebook.com/michaeljackson" type="text/html">
+	  <link rel="mj" href="https://www.michaeljackson.com/">
+	  <link rel="mj" href="https://www.instagram.com/michaeljackson/?hl=ru">
+    <link rel="mj" href="https://www.youtube.com/michaeljackson">
+    <meta property="og:url" content="https://paul-vasylenko.github.io/homepage/">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Michael Jackson - alive???</title>
   </head>
   <body>
     ― Hello World! &#x1F609;
