--- a/index.html
+++ b/index.html
@@ -15,6 +15,19 @@
     <title>Michael Jackson - alive???</title>
   </head>
   <body>
-    ― Hello World! &#x1F609;
+    <header>
+      <div class="container">
+        <div class="header__left">
+            <h2>
+              King of Pop is BACK!
+            </h2>
+            <a href="#" class="button"></a>
+            <p class="header__button-title">Read the interview</p>
+        </div>
+        <div class="header__right">
+          <img src="images/jackson_side.png" alt="">
+        </div>
+      </div>
+    </header>
   </body>
 </html>
