--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 
           <div class="header__left">
             <h2 class="header__title">
-              King of Pop is<br> <span>BACK</span>
+              King of Pop is<br> <span>BACK</span> 
+              <!-- I would be so happy if that was true :( -->
             </h2>
             
             <div class="quote">
@@ -39,5 +40,7 @@
         </div>
       </div>
     </div>
+
+    <script src="js/index.js"></script>
   </body>
 </html>
