added fixed position for a button that makes sounds of MJ (closes #14)

--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
       </div>
     </div>
 
+    <div class="fixed">
+      <img class= "fixed__img" src="images/jackson_icon2.png" alt="">
+    </div>
     <script src="js/index.js"></script>
   </body>
 </html>
