added css style connection

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="https://binary-studio-academy.github.io/stage-2/assets/stylesheets/base.css">
+    <link rel="stylesheet" href="css/index.css">
     <meta name="description" content="Michael Jackson is alive and is back">
     <meta name="keywords" content="Michael Jackson, HTML, CSS, BSA21">
     <meta name="author" content="Paul Vasylenko">
