added input and js to it

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	  <link rel="mj" href="https://www.instagram.com/michaeljackson/?hl=ru">
     <link rel="mj" href="https://www.youtube.com/michaeljackson">
     <meta property="og:url" content="https://paul-vasylenko.github.io/homepage/">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <title>Michael Jackson - alive???</title>
   </head>
   <body>
@@ -42,7 +42,7 @@
     </div>
     <div class="slider" id ="slider">
       <div class="container">
-        <h2 class="title">Exclusive: Michael Jackson gives an interview after so long!</h2>
+        <h2 class="slider__title">Exclusive: Michael Jackson gives an interview after so long!</h2>
         <div class="slider-container">
             <div class="slide">
               <h3 class="question">Michael, were you really guilty in child molestation charges?</h3>
@@ -104,6 +104,110 @@
         
       </div>
     </div>
+
+    <div class="timeline">
+      <div class="container">
+        <h2 class="timeline__title">~TIMELINE OF JACKSON~</h2>
+
+        <div class="timeline__block">
+
+          <p class="info_timeline birth">Birth</p>
+          <p class="info_timeline now">Nowadays</p>
+          <div class="rangeValue">
+            <span>1958</span>
+          </div>
+          <div class="field">
+            <div class="value left">1958</div>
+            <input type="range" min="1958" max="2021" value="1958" steps="1">
+            <div class="value right">2021</div>
+          </div>
+          
+          <div class="timeline__info">
+            <div class="info__date">
+              <ul class="info__events">
+                  <li class="date d1958">
+
+                  </li>
+                  <li class="date d1969">
+
+                  </li>
+                  <li class="date d1970">
+
+                  </li>
+                  <li class="date d1972">
+
+                  </li>
+                  <li class="date d1974">
+
+                  </li>
+                  <li class="date d1978">
+
+                  </li>
+                  <li class="date d1979">
+
+                  </li>
+                  <li class="date d1982">
+
+                  </li>
+                  <li class="date d1983">
+
+                  </li>
+                  <li class="date d1984">
+
+                  </li>
+                  <li class="date d1987">
+
+                  </li>
+                  <li class="date d1988">
+
+                  </li>
+                  <li class="date d1991">
+
+                  </li>
+                  <li class="date d1993">
+
+                  </li>
+                  <li class="date d1994">
+
+                  </li>
+                  <li class="date d1996">
+
+                  </li>
+                  <li class="date d1997">
+
+                  </li>
+                  <li class="date d1998">
+
+                  </li>
+                  <li class="date d2001">
+
+                  </li>
+                  <li class="date d2002">
+
+                  </li>
+                  <li class="date d2003">
+
+                  </li>
+                  <li class="date d2004">
+
+                  </li>
+                  <li class="date d2005">
+
+                  </li>
+                  <li class="date d2009">
+
+                  </li>
+                  <li class="date d2021">
+
+                  </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
     <div class="fixed">
       <img class= "fixed__img" src="images/jackson_icon2.png" alt="">
     </div>
