added footer, fixed some small bugs in musicbox

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                 Jackson’s hair catches on fire during filming of a Pepsi commercial.
               </li>
               <li class="date d1985">
-                His charitable work continued with the release of "We Are the World" (1985), co-written with Lionel Richie,[97] which raised money for the poor in the US and Africa.
+                His charitable work continued with the release of "We Are the World" (1985), co-written with Lionel Richie, which raised money for the poor in the US and Africa.
               </li>
               <li class="date d1986">
                 He diagnosed Jackson with lupus that year, and with vitiligo in 1986
@@ -231,11 +231,21 @@
                 Michael Jackson donates $125,000 from a concert at the Palace of Auburn Hills, Mich., and some personal memorabilia to start off a fundraising drive to preserve and improve the Motown Historical Museum.
                 <br> Releases “Moonwalk,” an autobiography.
               </li>
+              <li class="date d1989">
+                The Bad world tour ran from September 12, 1987, to January 14, 1989. In Japan, the tour had 14 sellouts and drew 570,000 people, nearly tripling the previous record for a single tour. The 504,000 people who attended seven sold-out shows at Wembley Stadium set a new Guinness World Record.
+              </li>
+              <li class="date d1990">
+                the 1990 Grammy Award for Best Music Video, Short Form for "Leave Me Alone". Jackson won an Award of Achievement at the American Music Awards in 1989 after Bad generated five number-one singles, became the first album to top the charts in 25 countries and the best-selling album worldwide in 1987 and 1988.
+              </li>
               <li class="date d1991">
                 Releases “Dangerous” album, certified for 7 million in sales.
               </li>
+              <li class="date d1992">
+                At the end of 1992, Dangerous was the best-selling album of the year worldwide and "Black or White" the best-selling single of the year worldwide at the Billboard Music Awards. In the UK, "Heal the World" made No. 2 on the charts in 1992
+              </li>
               <li class="date d1993">
-                In his first TV interview in 14 years, Jackson tells Oprah Winfrey that the change in his skin complexion is from a disorder called vitiligo.
+                In 1993, he performed "Remember the Time" at the Soul Train Music Awards in a chair, saying he twisted his ankle during dance rehearsals.
+                <br>In his first TV interview in 14 years, Jackson tells Oprah Winfrey that the change in his skin complexion is from a disorder called vitiligo.
                 <br>
                 A lawsuit claims that Jackson seduced and abused a 13-year-old boy.
               </li>
@@ -243,6 +253,9 @@
                 Settles the lawsuit with substantial payment to the plaintiff. Los Angeles and Santa Barbara district attorneys don’t file child molestation charges against him.
                 <br>
                 Marries Lisa Marie Presley, daughter of Elvis Presley.
+              </li>
+              <li class="date d1995">
+                In June 1995, Jackson released the double album HIStory: Past, Present and Future, Book I. The first disc, HIStory Begins, is a greatest hits album
               </li>
               <li class="date d1996">
                 Presley files for divorce.
@@ -256,6 +269,12 @@
               </li>
               <li class="date d1998">
                 Rowe gives birth to daughter Paris Michael Katherine.
+              </li>
+              <li class="date d1999">
+                In June 1999, Jackson joined Luciano Pavarotti for a War Child benefit concert in Modena, Italy. The show raised a million dollars for refugees of the Kosovo War, and additional funds for the children of Guatemala. Later that month, Jackson organized a series of "Michael Jackson & Friends" benefit concerts in Germany and Korea. Other artists involved included Slash, The Scorpions, Boyz II Men, Luther Vandross, Mariah Carey, A. R. Rahman, Prabhu Deva Sundaram, Shobana, Andrea Bocelli, and Luciano Pavarotti. The proceeds went to the Nelson Mandela Children's Fund, the Red Cross and UNESCO. From August 1999 to 2000, he lived in New York City at 4 East 74th Street. At the turn of the century, Jackson won an American Music Award as Artist of the 1980s. In 2000, Guinness World Records recognized him for supporting 39 charities, more than any other entertainer.
+              </li>
+              <li class="date d2000">
+                In 2000, Guinness World Records recognized him for supporting 39 charities, more than any other entertainer
               </li>
               <li class="date d2001">
                 The “Invincible” album is released with a respectable 2.1 million copies sold, but only two minor hits.
@@ -271,6 +290,16 @@
               </li>
               <li class="date d2005">
                 In June, Jackson was acquitted of child molestation charges.
+              </li>
+              <li class="date d2006">
+                In April 2006, Jackson agreed to use a piece of his ATV catalog stake, then worth about $1 billion, as collateral against his $270 million worth of loans from Bank of America.<br>
+                In November 2006, Jackson invited an Access Hollywood camera crew into the studio in Westmeath, and MSNBC reported that he was working on a new album, produced by will.i.am
+              </li>
+              <li class="date d2007">
+                In September 2007, Jackson was still working on his next album, which he never completed
+              </li>
+              <li class="date d2008">
+                For the 25th anniversary of Thriller in 2008, Jackson and Sony released Thriller 25, with two remixes released as singles: "The Girl Is Mine 2008" and "Wanna Be Startin' Somethin' 2008". For Jackson's 50th birthday, Sony BMG released a series of greatest hits albums, King of Pop, with different tracklists for different regions.
               </li>
               <li class="date d2009">
                 Announsed the last wourld tour "This Is It". Tickets for only 50 concert in London were sold by 2 weeks.
@@ -371,6 +400,20 @@
           </div>
           
         </div>
+      </div>
+    </div>
+
+    <div class="footer">
+      <div class="container">
+        <h3>Contact Michael - he is going to answer to some of your questions</h3>
+        <div class="footer-block">
+            <a class="link instagram-link" href="https://www.instagram.com/michaeljackson/?hl=ru">Instagram</a>
+            <a class="link facebook-link" href="https://www.facebook.com/michaeljackson">Facebook</a>
+            <a class="link merch-link" href="https://www.michaeljackson.com/" >Merch</a>
+            <a class="link youtube-link" href="https://www.youtube.com/michaeljackson" >Youtube</a>
+        </div>
+        <hr>
+        <p>All rights are served</p>
       </div>
     </div>
 
