tried to follow the online validator

--- a/index.html
+++ b/index.html
@@ -7,12 +7,8 @@
     <meta name="description" content="Michael Jackson is alive and is back">
     <meta name="keywords" content="Michael Jackson, HTML, CSS, BSA21">
     <meta name="author" content="Paul Vasylenko">
-    <link rel="mj" href="https://www.facebook.com/michaeljackson" type="text/html">
-	  <link rel="mj" href="https://www.michaeljackson.com/">
-	  <link rel="mj" href="https://www.instagram.com/michaeljackson/?hl=ru">
-    <link rel="mj" href="https://www.youtube.com/michaeljackson">
     <meta property="og:url" content="https://paul-vasylenko.github.io/homepage/">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <title>Michael Jackson - alive???</title>
   </head>
   <body>
@@ -117,7 +113,7 @@
           </div>
           <div class="field">
             <div class="value left">1958</div>
-            <input type="range" min="1958" max="2021" value="1958" steps="1">
+            <input type="range" min="1958" max="2021" value="1958" step="1">
             <div class="value right">2021</div>
           </div>
           <p class="add one"> KING OF POP</p>
@@ -422,7 +418,7 @@
         </div>
         
         <span class="hide__text" onclick="hideText()">></span>
-        <span   class="show__text" onclick="showText()"><</span>
+        <span   class="show__text" onclick="showText()">&lt;</span>
         <h3 class="fixed__text"> Watch the full interview on our <a href="https://hemansings.com/">Youtube!</a></h3>
         
       </div>
