added patch/content/primary branch, added <main> tag, added css validation

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <title>Michael Jackson - alive???</title>
   </head>
-  <body>
+  <main>
     <div class="header">
       <div class="container">
         <div class="flex-div">
@@ -35,6 +35,7 @@
         </div>
       </div>
     </div>
+  
     <div class="slider" id ="slider">
       <div class="container">
         <h2 class="slider__title">Exclusive: Michael Jackson gives an interview after so long!</h2>
@@ -99,7 +100,7 @@
         
       </div>
     </div>
-
+    
     <div class="timeline">
       <div class="container">
         <h2 class="timeline__title">~TIMELINE OF JACKSON~</h2>
@@ -342,7 +343,7 @@
         </div>
       </div>
     </div>
-
+    <main>
     <div class="music">
       <div class="container">
         <h2 class="music__title">BEST SONGS - click to listen to a part of MJ bests.</h2>
@@ -397,7 +398,7 @@
         </div>
       </div>
     </div>
-
+    </main>
     <div class="footer">
       <div class="container">
         <h3>Contact Michael - he is going to answer to some of your questions</h3>
